--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,3 +6,15 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+rocket = { version = "0.5.0-rc.1", features = ["json"] }
+rand = "0.8.4"
+serde = { version = "1.0.64", features = ["derive"] }
+postgres = "0.19.1"
+deadpool-postgres = "0.9.0"
+tokio = "1.8.1"
+tokio-postgres = "0.7.2"
+async-trait = "0.1.50"
+bcrypt = "0.10.0"
+jsonwebtoken = "7.2.0"
+chrono = "0.4.19"
+clokwerk = "0.3.5"
