--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,5 +16,5 @@ tokio-postgres = "0.7.2"
 async-trait = "0.1.50"
 bcrypt = "0.10.0"
 jsonwebtoken = "7.2.0"
-chrono = "0.4.19"
+chrono = { version = "0.4.19", features = ["serde"] }
 clokwerk = "0.3.5"
