--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,3 +18,4 @@ bcrypt = "0.10.0"
 jsonwebtoken = "7.2.0"
 chrono = { version = "0.4.19", features = ["serde"] }
 clokwerk = "0.3.5"
+uuid = { version = "0.8.2", features = ["serde", "v4"] }
