--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,7 +19,5 @@ chrono = { version = "0.4.19", features = ["serde"] }
 clokwerk = "0.3.5"
 uuid = { version = "0.8.2", features = ["serde", "v4"] }
 async-recursion = "0.3.2"
-hyper = { version = "0.14.11", features = ["full"] }
+reqwest = { version = "0.11.4", features = ["json"] }
 tokio = { version = "1.8.1", features = ["full"] }
-hyper-tls = "0.5.0"
-serde_json = "1.0.66"
