--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,3 +21,4 @@ uuid = { version = "0.8.2", features = ["serde", "v4"] }
 async-recursion = "0.3.2"
 reqwest = { version = "0.11.4", features = ["json"] }
 tokio = { version = "1.8.1", features = ["full"] }
+redis = { version = "0.21.0", features = ["tls", "tokio-native-tls-comp"] }
