--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,4 +21,5 @@ uuid = { version = "0.8.2", features = ["serde", "v4"] }
 async-recursion = "0.3.2"
 reqwest = { version = "0.11.4", features = ["json"] }
 tokio = { version = "1.8.1", features = ["full"] }
-redis = { version = "0.21.0", features = ["tls", "tokio-native-tls-comp"] }
+base64 = "0.13.0"
+serde_json = "1.0.66"
