--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,7 @@ clokwerk = "0.3.5"
 uuid = { version = "0.8.2", features = ["serde", "v4"] }
 async-recursion = "0.3.2"
 reqwest = { version = "0.11.4", features = ["json"] }
+openssl = "0.10.35"
 tokio = { version = "1.8.1", features = ["full"] }
 base64 = "0.13.0"
 serde_json = "1.0.66"
